# pcb2stl

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  k8s.yaml
src/pcb2stl/: __init__.py  api.py  config.py  domain.py  gcode.py  jig.py  merge.py  meshing.py  registration.py  runner.py  service.py  toolpaths.py  worker.py
src/pcb2stl/parsing/: __init__.py  base.py  dxf.py  gerber.py  svg.py
src/pcb2stl/web/: app.js  index.html  styles.css  traces-bg.js  viewer.js
tests/fixtures/: sample.dxf  sample.gbr
tests/integration/: test_api.py  test_runner.py  test_service.py
tests/unit/: test_domain.py  test_dxf_parser.py  test_gcode.py  test_gerber_parser.py  test_jig.py  test_merge.py  test_meshing.py  test_registration.py  test_svg_parser.py  test_toolpaths.py
