[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pcb2stl"
version = "0.1.0"
description = "Convert PCB copper artwork (Gerber/SVG/DXF) into a manifold STL for pen-plotting etch resist."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "gerbonara>=1.6",
    "ezdxf>=1.1",
    "manifold3d>=2.5",
    "pebble>=5.0",
    "shapely>=2.0",
    "svgelements>=1.9",
    "trimesh>=4.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "scipy>=1.11"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pcb2stl = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
